--- a/src/main/webapp/company_log/edit.html
+++ b/src/main/webapp/company_log/edit.html
@@ -282,6 +282,13 @@
 				              <span class="help-block">Mostra agendamentos de unidades diferentes da corrente?</span>
 				            </div>
 			          	</div> 
+						<div class="clearfix lift:SecuritySnippet.hasRelationModule">
+				            <label for="calendarShowSponsor">Mostra Pai/Mae/Resp Fin</label>
+				            <div class="input">
+				              <input id="calendarShowSponsor" name='calendarShowSponsor'>
+				              <span class="help-block">Mostra pai ou mãe ou responsável financeiro?</span>
+				            </div>
+			          	</div> 
 						<div class="clearfix">
 				            <label for="calendarAllAsConfirmed">Todos no dia como confirmados</label>
 				            <div class="input">
