--- a/src/main/webapp/quiz_admin/edit_question.html
+++ b/src/main/webapp/quiz_admin/edit_question.html
@@ -77,6 +77,16 @@
             </div>
           </div>
           <div class="clearfix">
+            <label for="addon" >AddOn</label>
+            <div class="input">
+              <div class="input-prepend">
+                <span class="add-on">+</span> 
+                <input class="mini" id="addon" name="addon" size="30" type="text"/>
+                <span class="help-block"></span>
+              </div>
+            </div>
+          </div>                
+          <div class="clearfix">
             <label for="orderinsection">Ordem</label>
             <div class="input">
               <input class="mini" id="orderinsection" name="orderinsection" size="5 " value = "10" type="text"/>
