quiz improvements - question list

--- a/src/main/webapp/quiz/list_question.html
+++ b/src/main/webapp/quiz/list_question.html
@@ -33,8 +33,10 @@
 		<thead>
 			<th>Id</th>
 			<th>Nome</th>
+			<th>Reduz</th>
 			<th>Seção</th>
 			<th>Ordem</th>
+			<th>Domínio</th>
 			<th>Observação</th>
 			<th>Ações</th>
 		</thead>
@@ -47,10 +49,16 @@
 					<f:name></f:name>
 				</td>
 				<td>
+					<f:short_name></f:short_name>
+				</td>
+				<td>
 					<f:quizsectionname></f:quizsectionname>
 				</td>
 				<td>
 					<f:orderinsection></f:orderinsection>
+				</td>
+				<td>
+					<f:quizdomainname></f:quizdomainname>
 				</td>
 				<td>
 					<f:obs></f:obs>
