templates review - ofx improvements

--- a/src/main/webapp/customer/active_bpmonthly.html
+++ b/src/main/webapp/customer/active_bpmonthly.html
@@ -111,8 +111,7 @@
             <span class="span9">
               <div class="clearfix">
                 <label for="customer">
-                  Cliente 
-                  <img src="/images/search.png" width="24" class="customer_search_button">  
+                <span data-i18n='Cliente'></span> 
                 </label>
                 <div class="input">
                   <div class="inline-inputs">
