--- a/src/main/webapp/customer/todo_list_report.html
+++ b/src/main/webapp/customer/todo_list_report.html
@@ -1,4 +1,4 @@
-<div id="main" class="lift:surround?with=calendar;at=content">
+<div id="main" class="lift:surround?with=calendar_true;at=content">
   <link rel="stylesheet" type="text/css" href="/select2/select2.css" />
   <script src="/select2/select2.js"></script><script src="/select2/select2_locale_pt-BR.js"></script>
   <script src="/js/reports.js"></script>
@@ -177,7 +177,6 @@
             <div class="clearfix">
               <label for="customer">
                 <span data-i18n='Clientes'></span> 
-                <img src="/images/search.png" width="24" class="customer_search_button">  
               </label>
               <div class="input">
                 <div class="inline-inputs">
@@ -345,6 +344,7 @@
             <div class="span12">
               <div class="clearfix">
                 <label for='customer'>
+                  <span data-i18n='Cliente'></span> 
                   <img class="customer_search_button" width='24' src="/images/search.png"/>
                 </label>
                 <div class="input">
