--- a/src/main/webapp/offsale/edit.html
+++ b/src/main/webapp/offsale/edit.html
@@ -1,4 +1,4 @@
-<div id="main" class="lift:surround?with=bootstrap_large&at=content">
+<div id="main" class="lift:surround?with=bootstrap&at=content">
   <span>
     <form   class="lift:OffSaleSnippet.maintain">
       <div class="well">
