--- a/src/main/webapp/unit/list.html
+++ b/src/main/webapp/unit/list.html
@@ -1,4 +1,4 @@
-<div id="main" class="lift:surround?with=bootstrap_large;at=content">
+<div id="main" class="lift:surround?with=bootstrap;at=content">
 	<div class="well">
         <label class="hide_mobile" for="btn"></label>
 		<a class="btn primary" href="/unit/edit">Inserir novo</a>
