--- a/src/main/webapp/customer/scheduling.html
+++ b/src/main/webapp/customer/scheduling.html
@@ -1,4 +1,4 @@
-<div id="main" class="lift:surround?with=bootstrap;at=content">
+<div id="main" class="lift:surround?with=dashboard_customer;at=content">
 	<div class="well">
 		<div class='filter block-message success"'>
 			<span class="filter_form">
@@ -12,7 +12,6 @@
 		                <label for="name"><span data-i18n='Cliente'></span></label>
 		                 <div class="input">
 		                    <div class='inline-inputs'>
-			                    <img class="customer_search_button" width='24' src="/images/search.png"/>
 								<input class='mini id_customer_search' id='customer_for_seach' type="number"/> 
 								<input class="disabled name_customer_search" name="name_customer" size="30" type="text" placeholder="Nome" disabled=""/>	      
 			                </div>
