--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -83,7 +83,6 @@
                         </div>
                         <div class="span2">
                         
-                           <font face="verdana,geneva">
                               <img style="width:100px" src="/images/finance.png" alt=""/>
                               <span class="help-block" style="color:#DF1818"><b>Financeiro</b></span>
                               Programe contas recorrentes, defina formas de pagamento, comissão e faturamento. Promova a <b>gestão descomplicada</b> de seu negócio, acesse tudo de qualquer lugar, qualquer dispositivo, a qualquer hora, com <b>total segurança</b>
@@ -93,18 +92,21 @@
                   </div>
                   <br/>
                   <div style="min-height: 80px; ">
-                     <img src="/images/web.jpg" border="0" height="60" align="left"/>
-                     <p>
-                        <font face="verdana,geneva">O <span class='system-name'></span> é uma <b>solução online</b>, que pode ser acessada de qualquer lugar do mundo, através de diversos dispositivos, simplificando a gestão do seu negócio. Controle Clientes, Profissionais, Produtos, Serviços, Comissões, Convênios, Promoções, Estoque, Fluxo de Caixa, e muito mais.</font>
+                     <p>_</p>
+                     <img src="/images/web.jpg" border="0" height="60" align="center"/>
+                     <p>_</p>
+                     <p style="width:60%; ">
+                        O <span class='system-name'></span> é uma <b>solução online</b>, que pode ser acessada de qualquer lugar do mundo, através de diversos dispositivos, simplificando a gestão do seu negócio. Controle Clientes, Profissionais, Produtos, Serviços, Comissões, Convênios, Promoções, Estoque, Fluxo de Caixa, e muito mais.</font>
                      </p>
+                     <p>_</p>
                   </div>
                   <center>
                      <a href = "http://www.vilarika.com.br">
-                     <img src="/images/agenda.jpg" border="0" width="200" height="100" align="center"/>
-                     <img src="/images/agd_mobile.jpg" border="0" width="50" height="100" align="center"/>
-                     <img src="/images/gerirme_composto1.jpg" border="0" width="200" height="100" align="center"/>
-                     <img src="/images/login_mobile.jpg" border="0" width="50" height="100" align="center"/>
-                     <img src="/images/pagto.jpg" border="0" width="200" height="100" align="center"/>
+                     <img style='padding-right:20px' src="/images/agenda.jpg" border="0" height="150" align="center"/>
+                     <img style='padding-right:20px' src="/images/agd_mobile.jpg" border="0" height="150" align="center"/>
+                     <img style='padding-right:20px' src="/images/gerirme_composto1.jpg" border="0" height="150" align="center"/>
+                     <img style='padding-right:20px' src="/images/login_mobile.jpg" border="0" height="150" align="center"/>
+                     <img style='padding-right:20px' src="/images/pagto.jpg" border="0" height="150" align="center"/>
                      </a>
                   </center>
                </center>
