--- a/src/main/webapp/templates-hidden/bootstrap.html
+++ b/src/main/webapp/templates-hidden/bootstrap.html
@@ -149,7 +149,7 @@
       <div class="content">
         <div class="page-header">
           <h1>
-            <span class="lift:CompanySnippet.thumb"></span><span class="lift:Menu.title"></span><small> - <span class='system-name'></span> Gestão Integrada</span></small>
+            <span class="lift:CompanySnippet.thumb"></span><span class="lift:Menu.title"></span><small> - <span class='system-name'></span> Gestão Integrada</small>
           </h1>
         </div>
         <div class="row">
@@ -162,40 +162,6 @@
         </div>
       </div>
 
-    <div id="customer_search" class="modal hide fade">
-    <div class="modal-header">
-            <a href="#" class="close">&times;</a>
-          <h3>Buscar Cliente</h3>
-    </div>
-    <div class="modal-body ">
-    <form class="lift:form.ajax">
-          <div class="well">
-            <input class="btn success" type="submit" value="Buscar">
-          </div>    
-            <span class='lift:CustomerSnippet.formSeachCustomer'>
-              <div class="clearfix">
-                <label for="name">Nome</label>
-                 <div class="input">
-                    <input class="medium customer_name" id="name" name="name" size="30" type="text"/>
-                    <span class="help-block">Nome completo</span>
-                 </div>
-              </div>        
-              <div class="clearfix">
-                <label for="document">Telefone</label>
-                 <div class="input">
-                    <input class="medium customer_document" id="document" name="document" size="30" type="text"/>
-                    <span class="help-block">Telefone</span>
-                 </div>
-              </div>
-            </span>
-            <input type="hidden" id="id_customer_search_form" name='id_customer_search_form'/>
-        </form> 
-        <table id='table_customer' class="zebra-striped">
-        </table>    
-    </div>  
-    <div class="modal-footer">
-    </div>
-  </div>      
       <footer>
         <div class="lift:surround?with=footer;at=footer">
         </div>
