--- a/src/main/webapp/templates-hidden/index.html
+++ b/src/main/webapp/templates-hidden/index.html
@@ -166,155 +166,12 @@
    </head>
    </head>
    <body class="body">
-      <div class="lift:surround?with=toolbar;at=toolbar">
-      </div>
+      <!--div Rigel 15/05/2018 class="lift:surround?with=toolbar;at=toolbar">
+      </div-->
       <span class="messages">
          <div class="lift:Msgs?showAll=true"></div>
       </span>
       <div class="container-fluid" id="content">
-      </div>
-      <div id="customer_search" class="modal hide fade">
-         <div class="modal-header">
-            <a href="#" class="close">&times;</a>
-            <h3>Buscar <span data-i18n='Cliente'></span></th></h3>
-         </div>
-         <div class="modal-body ">
-            <form class="lift:form.ajax">
-               <div class="well">
-                  <input class="btn success" type="submit" value="Buscar">
-               </div>
-               <span class='lift:CustomerSnippet.formSeachCustomer'>
-                  <div class="clearfix">
-                     <label for="name">Nome</label>
-                     <div class="input">
-                        <input class="medium customer_name" id="name" name="name" size="30" type="text"/>
-                        <span class="help-block">Nome completo</span>
-                     </div>
-                  </div>
-                  <div class="clearfix">
-                     <label for="document">Telefone</label>
-                     <div class="input">
-                        <input class="medium customer_document" id="document" name="document" size="30" type="text"/>
-                        <span class="help-block">Use um hífen para separar os últimos 4 dígitos</span>
-                     </div>
-                  </div>
-                  <div class="clearfix">
-                     <label for="email">Email</label>
-                     <div class="input">
-                        <input class="medium customer_email" id="email" name="email" size="30" type="text"/>
-                        <span class="help-block">Use apenas letras minúsculas</span>
-                     </div>
-                  </div>
-               </span>
-               <input type="hidden" id="id_customer_search_form" name='id_customer_search_form'/>
-            </form>
-            <table id='table_customer' class="zebra-striped">
-            </table>
-         </div>
-         <div class="modal-footer">
-         </div>
-      </div>
-      <div id="customer_rapid_add" class="modal hide fade">
-         <div class="modal-header">
-            <a href="#" class="close">&times;</a>
-            <h3>Cadastro Rápido de <span data-i18n='Cliente'></span</h3>
-         </div>
-         <div class="modal-body ">
-            <form>
-               <div class="well">
-                  <input class="btn success" id="b_customer_rapid_add" type="button" value="Salvar">
-               </div>
-               <span>
-                  <div class="clearfix">
-                     <label for="name">Nome</label>
-                     <div class="input">
-                        <input class="xlarge" id="rapid_customer_name" name="rapid_customer_name" size="30" type="text"/>
-                        <span class="help-block">Nome completo</span>
-                     </div>
-                  </div>
-                  <div class="clearfix">
-                     <label for="phone">Telefone</label>        
-                     <div class="input">
-                        <div class='inline-inputs'>
-                           <div class="input-prepend" style='float:left; padding-right:10px'>
-                              <span class="add-on"><img src='/images/phone.png'/></span> 
-                              <input class="medium phone" id="rapid_customer_phone" name="rapid_customer_phone" size="30" type="text"/>
-                           </div>
-                        </div>
-                     </div>
-                  </div>
-                  <div class="clearfix">
-                    <label for="mobile_phone">Celular</label>        
-                     <div class="input">
-                        <div class='inline-inputs'>
-                          <div class="input-prepend" style='float:left; padding-right:10px'>
-                            <span class="add-on"><img src='/images/mobile_phone.png'/></span> 
-                            <input class="medium phone" id="rapid_customer_mobile_phone" name="rapid_customer_mobile_phone" size="30" type="text"/>
-                          </div>
-                          <div class="input-prepend" style='float:left; padding-right:10px'>
-                            <select class="small" id="rapid_customer_mobile_phone_op" name="rapid_customer_mobile_phone_op" size="30" type="text">
-                              <option value="0">Selecione uma operadora</option>
-                              <option value="1">Tim</option>
-                              <option value="2">Claro</option>
-                              <option value="3">CTBC Telecom</option>
-                              <option value="4">Oi</option>
-                              <option value="5">Vivo</option>
-                              <option value="6">Sercontel</option>
-                              <option value="7">Nextel</option>
-                            </select>
-                          </div>
-                      </div>
-                     </div>
-                  </div>
-                  <div class="clearfix">
-                    <label for="email">Email</label>        
-                     <div class="input">
-                        <div class='inline-inputs'>
-                          <div class="input-prepend" style='float:left; padding-right:10px'>
-                            <span class="add-on">@</span> 
-                            <input class="xlarge email" id="rapid_customer_email" name="rapid_customer_email" size="30" type="text"/>
-                          </div>
-                      </div>
-                     </div>
-                  </div>
-                  <div class="clearfix">
-                     <label for="indicatedby">Indicado por?</label>
-                     <div class="input">
-                        <span>
-                        <img class="customer_search_button" width='24' src="/images/search.png"/>
-                        <input class='mini id_customer_search' id='rapid_customer_bp_indicatedby' name="rapid_customer_bp_indicatedby" /> 
-                        <input class="name_customer_search" name="rapid_customer_indicatedby" id="rapid_customer_indicatedby"  size="30" type="text" placeholder="Nome"/>    
-                        </span>
-                        <span class="help-block">Indicado por</span>
-                     </div>
-                  </div>
-                  <div class="clearfix">
-                     <label for="obs">Obs</label>        
-                     <div class="input">
-                        <div class='inline-inputs'>
-                           <input class="" id="rapid_customer_obs" name="rapid_customer_obs" size="30" type="textarea"/>
-                        </div>
-                     </div>
-                  </div>
-               </span>
-            </form>
-         </div>
-         <div class="modal-footer">
-         </div>
-      </div>
-      <div id="treatment_remove" class="modal hide fade">
-         <div class="modal-header">
-            <a href="#" class="close">&times;</a>
-            <h3>Excluir Atendimento</h3>
-         </div>
-         <div class="modal-body ">
-            Essa ação excluirá permanentemente esse atendimento e todos seus dados.
-            Tem certeza que deseja excluir esse atendimento?
-            <div class="modal-footer">
-               <input type="button" class="btn danger" value="Sim" onclick="CalendarScreen.removeTreatment();"/>
-               <input type="button" class="btn primary" value="Não" onclick="$('#treatment_remove').modal('hide');"/>             
-            </div>
-         </div>
       </div>
    </body>
 </html>
