--- a/src/main/webapp/templates-hidden/project.html
+++ b/src/main/webapp/templates-hidden/project.html
@@ -205,5 +205,41 @@
       </footer-->
     </div> <!-- /container -->
     </div>
+<!-- PRECISA FICAR PQ o fato de não ter um name="document" faz o esquema de 2 edit de cliente parar de funcionar - ocorre tb em animal
+MAS não fa cadastro de cliente aqui - só na agenda e no financeiro/caixa
+-->
+<div id="customer_search" class="modal hide fade">
+  <div class="modal-header">
+    <a href="#" class="close">&times;</a>
+    <h3>Buscar <span data-i18n='Cliente'></span>
+    </h3>
+  </div>
+  <div class="modal-body ">
+    <form class="lift:form.ajax">
+      <div class="well">
+        <input class="btn success" type="submit" value="Buscar">
+      </div>
+      <span class='lift:CustomerSnippet.formSeachCustomer'>
+        <div class="clearfix">
+          <label for="name">Nome</label>
+          <div class="input">
+            <input class="medium customer_name" id="name" name="name" size="30" type="text"/>
+          </div>
+        </div>
+        <div class="clearfix">
+          <label for="document">Telefone</label>
+          <div class="input">
+            <input class="medium customer_document id="document" name="document" size="30" type="text"/>
+          </div>
+        </div>
+      </span>
+      <input type="hidden" id="id_customer_search_form" name='id_customer_search_form'/>
+    </form>
+    <table id='table_customer' class="zebra-striped">
+    </table>
+  </div>
+  <div class="modal-footer">
+  </div>
+</div>
   </body>
 </html>
