migration external_id product type

--- a/src/main/webapp/product_admin/edit_type.html
+++ b/src/main/webapp/product_admin/edit_type.html
@@ -23,6 +23,12 @@
               </div>
              </div>
           </div>
+          <div class="clearfix lift:SecuritySnippet.isSuperAdmin">
+            <label for="name">Migração *</label>        
+            <div class="input">
+                  <input class="mini" id="external_id" name="external_id" size="30" type="text"/>
+            </div>
+          </div>
           <div class="clearfix">
             <label for="status">Status</label>
             <div class="input">
