--- a/src/main/webapp/financial_admin/accountcompanyunit.html
+++ b/src/main/webapp/financial_admin/accountcompanyunit.html
@@ -69,7 +69,10 @@
                 </div>
              </div>
           </div>
-          <div class="clearfix">
+          <!--
+          nao pode inativar conta de unidade. ou inativa a conta ou a unidade
+
+          div class="clearfix">
             <label for="status">Status</label>
             <div class="input">
               <div class="input-prepend">
@@ -80,7 +83,7 @@
                 </a>
               </div>
             </div>
-          </div>          
+          </div-->          
         </span>
       </div>
     </form>
