--- a/src/main/webapp/customer/edit.html
+++ b/src/main/webapp/customer/edit.html
@@ -349,6 +349,18 @@
                             </div>
                         </div>
                         <div class="clearfix lift:SecuritySnippet.hasReferralModule">
+                            <label for="bp_origem">Origem</label>
+                            <div class="input">
+                                <div class='inline-inputs'>
+                                    <div class="input-prepend" style='float:left; padding-right:10px'>
+                                        <span class="hide_mobile add-on"><img src='/images/sex.png'/></span> 
+                                        <select id="bp_origin" name="bp_origin" ></select>
+                                        <span class="help-block">Origem do prospect/cliente</span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="clearfix lift:SecuritySnippet.hasReferralModule">
                             <label for="indicatedby">Indicado por?</label>
                             <div class="input">
                                 <span>
@@ -515,6 +527,13 @@
                             <div class="input">
                                 <select name="is_prospect"></select>
                                 <span class="help-block">Indica que este parceiro é um prospect</span>
+                            </div>
+                        </div>
+                        <div class="clearfix lift:SecuritySnippet.hasReferralModule">
+                            <label for="is_origin">É Origem</label>
+                            <div class="input">
+                                <select name="is_origin"></select>
+                                <span class="help-block">Indica que este parceiro é origem de prospects/clientes</span>
                             </div>
                         </div>
                         <div class="clearfix lift:SecuritySnippet.isInventoryManager">
